--- a/cursobasico/index.html
+++ b/cursobasico/index.html
@@ -76,7 +76,7 @@
 						<div class="columna columna-33 columna-mobile-100">
 							<div class="bloque-servicio">
 								<div class="bloque-img-servicio cuadrado-perfecto">
-								<img src="img/servicio.jpg">
+								<img src="img/servicio1.jpg">
 								</div>
 								<div class="bloque-contenido-servicio">
 									<h3>servicio 2</h3>
@@ -168,33 +168,6 @@
 								<div class="form-block bloque-ultimo">
 									<input type="submit" class="boton boton-negro" value="enviar">
 								</div>
-								<?php
-									if($_SERVER["REQUEST_METHOD"] == "POST")
-									{
-										$nombre = $_POST["nombre"];
-										$email = $_POST["email"];
-										$mensaje = $_POST["mensaje"];
-
-										if(isset($nombre))
-										{
-											if(isset($email))
-											{
-												if(isset($mensaje))
-												{
-													$para = "quirogadavid1002@gmail.com";
-													$asunto="Esto es una prueba";
-													$cuerpo = $nombre."\n".$email."\n".$mensaje;
-													$adicional = "From: noreplay@quirogadavid1002.com";
-
-													mail($para,$asunto,$cuerpo,$adicional);
-												?>
-													<p>Envio exitoso</p>
-												<?php 
-												}
-											}
-										}	
-									}
-								?>
 							</form>
 						</div>
 					</div>
